textbox rood gemaakt

--- a/hoi.html
+++ b/hoi.html
@@ -1,5 +1,9 @@
 hoi <b>vandaag</b>
-<input type=radio> VCS
+<input type=text> VCS
 
 go test
-<style></style>
+<style>
+	input{
+		background-color:red;
+	}
+</style>
